crystal-facet-uml (1.36.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * During import, changed ids and classifier-names are reported on stdout
  * The json export contains some more information to improve readability
  * build for wine using mingw uses sources not older that 4 years

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 27 Feb 2022 16:00:00 +0200

crystal-facet-uml (1.35.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * undo of paste requires just 1 click on undo btn (as in version 1.33.1)
  * when pasting from the clipboard, uuids are preserved.
  * pasting messages-between-lifelines from the clipboard to other diagrams
    is not possible anymore, please create new messages when needed.
  * when creating features, the type field is not pre-filled by a proposal
  * json export produces identical text files if there are no changes
  * json files can be imported
  * database test and repair options return with non-zero result if error,
    check via echo $?

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 01 Jan 2022 16:00:00 +0200

crystal-facet-uml (1.34.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * no error if gtk_init_check fails - otherwise tests would fail

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 29 Nov 2021 20:00:00 +0200

crystal-facet-uml (1.34.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * export in json format contains also uuids as links (for auto-merging)
  * export in json format nicer for humans to read (for diff and merge)
  * export in json format contains also lifelines

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 28 Nov 2021 21:00:00 +0200

crystal-facet-uml (1.33.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fix: When cutting a diagram, one can immediately paste it to the previous
    position; also paste it immediately after opening a new db.
  * Layouting of lines prefers connector types Z over S, N over L7
